--- a/GiftBoxRESTServer/pom.xml
+++ b/GiftBoxRESTServer/pom.xml
@@ -26,7 +26,7 @@
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
-			<version>2.2.1.GA</version>
+			<version>3.0-beta-5</version>
 		</dependency>
 
 		<dependency>
