--- a/GiftBoxRESTServer/src/main/webapp/WEB-INF/web.xml
+++ b/GiftBoxRESTServer/src/main/webapp/WEB-INF/web.xml
@@ -1,37 +1,57 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app>
-  <display-name>GiftBox</display-name>
-  
-  <!-- Auto scan REST service -->
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	version="2.5">
 	<context-param>
-		<param-name>resteasy.scan</param-name>
-		<param-value>true</param-value>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
+            /WEB-INF/spring/root-context.xml
+        </param-value>
 	</context-param>
- 
-	<!-- this need same with resteasy servlet url-pattern -->
-	<context-param>
-		<param-name>resteasy.servlet.mapping.prefix</param-name>
-		<param-value>/rest</param-value>
-	</context-param>
- 
 	<listener>
-		<listener-class>
-			org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap
-		</listener-class>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
- 
 	<servlet>
-		<servlet-name>resteasy-servlet</servlet-name>
-		<servlet-class>
-			org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher
-		</servlet-class>
+		<servlet-name>dispatcherServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>
+                /WEB-INF/spring/appServlet/servlet-context.xml
+            </param-value>
+		</init-param>
+		<load-on-startup>
+			1
+        </load-on-startup>
 	</servlet>
- 
 	<servlet-mapping>
-		<servlet-name>resteasy-servlet</servlet-name>
-		<url-pattern>/rest/*</url-pattern>
+		<servlet-name>appServlet</servlet-name>
+		<url-pattern>
+            /
+        </url-pattern>
 	</servlet-mapping>
+	<filter>
+		<display-name>gzipFilter</display-name>
+		<filter-name>gzipFilter</filter-name>
+		<filter-class>
+			de.metagear.util.servlet.GzipFilter</filter-class>
+		<init-param>
+			<param-name>debug</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
+			<param-name>compressionThreshold</param-name>
+			<param-value>1024</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>gzipFilter</filter-name>
+		<servlet-name>appServlet</servlet-name>
+	</filter-mapping>
+	<welcome-file-list>
+		<welcome-file>
+            index.html
+        </welcome-file>
+	</welcome-file-list>
 </web-app>
