--- a/GiftBoxRESTServer/pom.xml
+++ b/GiftBoxRESTServer/pom.xml
@@ -7,6 +7,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>restServer Maven Webapp</name>
 	<url>giftbox</url>
+	<!-- blatest -->
 
 	<repositories>
 		<repository>
