--- a/GiftBoxRESTServer/pom.xml
+++ b/GiftBoxRESTServer/pom.xml
@@ -18,7 +18,7 @@
 
 	<!-- Shared version number properties -->
 	<properties>
-		<org.springframework.version>3.0.0.RELEASE</org.springframework.version>
+		<org.springframework.version>3.2.3.RELEASE</org.springframework.version>
 	</properties>
 
 	<dependencies>
@@ -254,6 +254,18 @@
 			<artifactId>spring-test</artifactId>
 			<version>${org.springframework.version}</version>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.sql</groupId>
+			<artifactId>jdbc-stdext</artifactId>
+			<version>2.0</version>
 		</dependency>
 
 	</dependencies>
