--- a/GiftBoxRESTServer/src/main/webapp/WEB-INF/web.xml
+++ b/GiftBoxRESTServer/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>
-                /WEB-INF/spring/appServlet/servlet-context.xml
+                /WEB-INF/spring/dispatcherServlet/servlet-context.xml
             </param-value>
 		</init-param>
 		<load-on-startup>
@@ -26,7 +26,7 @@
         </load-on-startup>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>appServlet</servlet-name>
+		<servlet-name>dispatcherServlet</servlet-name>
 		<url-pattern>
             /
         </url-pattern>
@@ -35,7 +35,7 @@
 		<display-name>gzipFilter</display-name>
 		<filter-name>gzipFilter</filter-name>
 		<filter-class>
-			de.metagear.util.servlet.GzipFilter</filter-class>
+			de.giftbox.gzip.GzipFilter</filter-class>
 		<init-param>
 			<param-name>debug</param-name>
 			<param-value>true</param-value>
@@ -47,7 +47,7 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>gzipFilter</filter-name>
-		<servlet-name>appServlet</servlet-name>
+		<servlet-name>dispatcherServlet</servlet-name>
 	</filter-mapping>
 	<welcome-file-list>
 		<welcome-file>
