--- a/GiftBoxRESTServer/pom.xml
+++ b/GiftBoxRESTServer/pom.xml
@@ -40,11 +40,8 @@
 			<version>4.1.9.Final</version>
 		</dependency>
 
-		<!-- <dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-annotations</artifactId>
-			<version>3.5.6-Final</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-annotations</artifactId> 
+			<version>3.5.6-Final</version> </dependency> -->
 
 		<dependency>
 			<groupId>mysql</groupId>
